--- a/index.html
+++ b/index.html
@@ -551,14 +551,26 @@
         <section class="hero" aria-labelledby="intro-heading">
             <div class="card">
                 <h1 id="intro-heading">Reese Thompson</h1>
-                <p class="subtitle">Hello! I'm Reese. With diverse experience and a passion for learning, I thrive at
-                    the intersection of software engineering, problem‑solving, and technical leadership. My passion lies
-                    in developing efficient systems and solutions that address complex challenges.</p>
+                <!-- Two concise intro paragraphs -->
+                <p class="subtitle">
+                    I’m a software engineer who loves building efficient systems at the intersection of engineering,
+                    problem-solving, and technical leadership.
+                </p>
+                <!-- <p class="subtitle">
+                    Cornell CS ’25 and now at AWS Batch. Previously a CS systems TA and business lead for Cornell Steel
+                    Bridge. Outside work: project cars (Miata!), golf, and skiing.
+                </p> -->
                 <div class="chips" aria-label="Highlights">
                     <span class="chip">Software Engineer @ AWS Batch</span>
                     <span class="chip">Cornell CS ’25</span>
                     <span class="chip">Fast learner</span>
                     <span class="chip">Problem solver</span>
+                    <span class="chip">Horseheads, NY</span>
+                    <span class="chip">Seattle, WA</span>
+                    <span class="chip">Cloud Computing & IaC</span>
+                    <span class="chip">Computer Systems Programming</span>
+                    <span class="chip">Business Management & Leadership</span>
+                    <span class="chip">Hiking • Golfing • Skiing</span>
                 </div>
             </div>
             <div class="card">
@@ -577,7 +589,7 @@
         <!-- About -->
         <section id="about" class="card" aria-labelledby="about-heading">
             <h2 id="about-heading">📝 About Me</h2>
-            <p>I’m a problem solver and a fast learner. I love finding new solutions to simple and complex problems. I
+            <p>I’m a problem solver and a fast learner. I love finding new solutions to complex problems. I
                 recently graduated from Cornell, where I was an experienced Teaching Assistant for Computer Systems
                 Organization and a Business Lead for the Cornell Steel Bridge Project Team. I’m now a full‑time software
                 engineer at AWS Batch. When I’m not working, I love working on project cars (especially my Miata!),
@@ -589,11 +601,12 @@
             <h2 id="exp-heading">💼 Experience</h2>
             <div class="grid two">
                 <div class="item">
-                    <h3>AWS Batch | Software Development Engineer</h3>
+                    <h3>👨‍💻 AWS Batch | Software Development Engineer</h3>
                     <div class="meta">May 2024 – Present · Seattle, WA (On‑site)</div>
                     <ul>
-                        <li>Software Development Engineer on <a href="https://aws.amazon.com/batch/" target="_blank"
-                                rel="noreferrer noopener">AWS Batch</a>.</li>
+                        <li>Software Development Engineer on the Telemetry and Scaling teams of <a
+                                href="https://aws.amazon.com/batch/" target="_blank" rel="noreferrer noopener">AWS
+                                Batch</a>.</li>
                         <li>Build and maintain distributed systems that orchestrate large‑scale batch workloads on AWS.
                         </li>
                         <li>Collaborate with cross‑functional teams to ship reliable, cost‑efficient compute features.
@@ -601,7 +614,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Cornell University | Teaching Assistant - Computer Systems Organization</h3>
+                    <h3>📚 Cornell University | Teaching Assistant - Computer Systems Organization</h3>
                     <div class="meta">Aug 2023 – Aug 2025 · Ithaca, NY (On‑site)</div>
                     <ul>
                         <li>Led lab sessions and weekly office hours for CS3410 (Computer Systems Organization).</li>
@@ -610,7 +623,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>The Hilliard Corporation | Software Developer Intern</h3>
+                    <h3>⚙️ The Hilliard Corporation | Software Developer Intern</h3>
                     <div class="meta">May 2023 - August 2023</div>
                     <ul>
                         <li>Developed database‑driven web apps to track research, manufacturing, and engineering
@@ -621,7 +634,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Corning Incorporated | Lab Management Intern</h3>
+                    <h3>👨‍🔬 Corning Incorporated | Lab Management Intern</h3>
                     <div class="meta">May 2022 - August 2022</div>
                     <ul>
                         <li>Modeled and designed a closed‑loop water‑cooling system to reduce sediment in lab
@@ -632,7 +645,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Winchester Optical Company | Lab Technician</h3>
+                    <h3>👓 Winchester Optical Company | Lab Technician</h3>
                     <div class="meta">June 2020 - May 2022</div>
                     <ul>
                         <li>Received, corrected, and organized incoming orders for eyeglass lenses from doctors
@@ -652,15 +665,16 @@
             <h2 id="edu-heading">🎓 Education</h2>
             <div class="grid two">
                 <div class="item">
-                    <h3>BS Computer Science — Cornell University</h3>
+                    <h3>🖥️ BS Computer Science — Cornell University</h3>
                     <div class="meta">2025</div>
                     <ul>
+                        <li>Graduated from the College of Engineering with Cum Laude distinction.</li>
                         <li>Activities &amp; societies: Joan &amp; Irwin Jacobs Scholar; Cornell Ski Club; Cornell Wind
                             Symphony.</li>
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Business Minor — Cornell University</h3>
+                    <h3>💼 Business Minor — Cornell University</h3>
                     <div class="meta">2025</div>
                     <ul>
                         <li>Including MBA level courses in Financial Accounting and Marketing Management</li>
@@ -675,14 +689,14 @@
             <h2 id="proj-heading">🚀 Projects</h2>
             <div class="grid two">
                 <div class="item">
-                    <h3>Psychometric Aptitude Test Suite (PATS)</h3>
+                    <h3>🧠 Psychometric Aptitude Test Suite (PATS)</h3>
                     <div class="meta">Cornell CS3110 • OCaml • Lambda Psychometric Group</div>
                     <p>
                         An extensible aptitude-testing suite built in OCaml for CS3110. We designed a modular core
                         (modules/functors) that standardizes timing, item banks, scoring, and persistence, so new tests
                         can be added without touching the engine. Includes a CLI runner, JSON configs/results, and
                         validation. Also included a custom currency-based incentive system.
-                        <br /><strong>Role:</strong> Functional Systems Engineer (team of 3–4)
+                        <br /><strong>Role:</strong> Functional Systems Engineer (team of 4)
                         <br /><strong>Methods:</strong> OCaml modules & functors, immutable data modeling, interface
                         signatures, property-based + unit testing
                         <br /><strong>Tools:</strong> OCaml, Dune, OUnit/Alcotest, QCheck, JSON, Git
@@ -690,7 +704,7 @@
                 </div>
 
                 <div class="item">
-                    <h3>NLP Business Pitch Viability Engine</h3>
+                    <h3>🦈 NLP Business Pitch Viability Engine</h3>
                     <div class="meta">Machine Learning • Python • scikit-learn</div>
                     <p>
                         Built a predictor for pitch “viability” by computing similarity to historical Shark Tank deals
@@ -704,7 +718,7 @@
                 </div>
 
                 <div class="item">
-                    <h3>ML Hand Recognition</h3>
+                    <h3>✋ ML Hand Recognition</h3>
                     <div class="meta">Computer Vision • Python • NumPy</div>
                     <p>
                         A custom multi-layer perceptron to classify rock–paper–scissors outcomes from low-resolution
@@ -717,16 +731,16 @@
                 </div>
 
                 <div class="item">
-                    <h3>AWS Batch CDK Job Orchestration</h3>
+                    <h3>💻 AWS Batch CDK Job Orchestration</h3>
                     <div class="meta">AWS • IaC • TypeScript/Python</div>
                     <p>
                         CDK scripts to spin up and tear down an AWS Batch pipeline for a Python data-file workload. A
                         helper auto-packages code, builds a Docker image, pushes to ECR, and updates the job
-                        definition—one command to run. Stack includes VPC/compute, job queue, IAM (least-privilege), and
+                        definition: all with one run command. Stack includes VPC/compute, job queue, IAM
+                        (least-privilege), and
                         CloudWatch logging.
                         <br /><strong>Role:</strong> Software Engineer
-                        <br /><strong>Methods:</strong> IaC, automated container builds, ephemeral environments,
-                        observability
+                        <br /><strong>Methods:</strong> IaC, automated container builds, observability
                         <br /><strong>Tools:</strong> AWS CDK, AWS Batch, ECR, Docker, CloudWatch
                     </p>
                 </div>
