disable text selection on RT logo badge

--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
             box-shadow: var(--shadow)
         }
 
+        /* Prevent highlight/selection on brand area (badge + name) */
+        .brand .badge,
+        .brand a {
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            -webkit-touch-callout: none;
+            -webkit-tap-highlight-color: transparent;
+        }
+
         .right {
             display: flex;
             align-items: center;
@@ -883,6 +894,13 @@
             badge.addEventListener('mousedown', start);
             badge.addEventListener('mouseup', cancel);
             badge.addEventListener('mouseleave', cancel);
+        })();
+
+        // Prevent text selection on long‑press in brand area
+        (function () {
+            const brand = document.querySelector('.brand');
+            if (!brand) return;
+            brand.addEventListener('selectstart', (e) => e.preventDefault());
         })();
 
         // Mobile dropdown toggle
